hw5_ws/log/build_2024-03-11_04-33-55/turtle_run/stderr.log
  File "/home/vboxuser/hw5_ws/install/turtle_run/lib/python3.10/site-packages/turtle_run/turtle_run_client.py", line 114
    self.logit(f"Current Location ({
               ^
SyntaxError: unterminated string literal (detected at line 114)

